<resources>
    <string name="app_name">SQLite DB</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="submit">Submit</string>
    <string name="show_data">Show Data</string>
    <string name="edit_data">Edit Data</string>
    <string name="delete_data">Delete Data</string>
</resources>
